<resources>
    <string name="app_name">Pedometer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="progress">Progress</string>
    <string name="calories">Calories</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="speed">Avg. Speed</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="newUser">No account yet? Create one</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="stepLength">Step Length</string>
    <string name="confirm">Confirm</string>
    <string name="totalRuns">Runs :</string>
    <string name="totalCalories">Calories burned : </string>
    <string name="choosePicture">Choose Picture</string>
    <string name="defaultPicture">Default</string>
    <string name="history">History</string>
    <string name="appVersion">Version : V 1.0</string>
    <string name="contact">Contact: a.elamin95@gmail.com</string>
</resources>
