<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaultPicture"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_addPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/choosePicture" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/weight"
        android:textColorHint="@android:color/background_light">

        <EditText
            android:id="@+id/input_Weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/height"
        android:textColorHint="@android:color/background_light">

        <EditText
            android:id="@+id/input_Height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="15dp"
        android:hint="@string/stepLength"
        android:textColorHint="@android:color/background_light">

        <EditText
            android:id="@+id/input_StepLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stepLength"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/red"
        android:padding="12dp"
        android:text="@string/confirm"
        android:textColor="@android:color/background_light" />

</LinearLayout>
