<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.lap.pedometer.ui.MainActivity">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/steps_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            custom:arc_bottom_text="Steps"
            custom:circle_progress="20" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/calories_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            custom:arc_bottom_text="@string/calories"
            custom:arc_finished_color="@color/red"
            custom:arc_max="1000"
            custom:arc_progress="20"
            custom:arc_unfinished_color="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDuration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView"
            android:textColor="@color/red"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/distance_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            custom:arc_bottom_text="@string/distance"
            custom:circle_progress="20" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/speed_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            custom:arc_bottom_text="@string/speed"
            custom:arc_finished_color="@color/red"
            custom:arc_max="1000"
            custom:arc_progress="20"
            custom:arc_unfinished_color="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            custom:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            custom:srcCompat="@drawable/ic_stop_black_24dp" />
    </LinearLayout>

</LinearLayout>
