<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.lap.pedometer.ui.ProfileActivity">


    <LinearLayout
        android:id="@+id/row0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            app:srcCompat="@drawable/app_icon" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/row_weight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.15"
        android:background="@drawable/round_bg"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lbl_weightValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_height"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.15"
        android:background="@drawable/round_bg"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/height"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lbl_heightValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_totalRuns"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.15"
        android:background="@drawable/round_bg"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_totalRuns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totalRuns"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lbl_totalRunsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_totalCalories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.15"
        android:background="@drawable/round_bg"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_totalCaloriesRuns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totalCalories"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_totalCaloriesValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>